# combinatorial_optimisation

./: README.md
hw_1/: README.md
hw_2/: CMakeLists.txt  README.md  branch_and_bound.cpp  branch_and_bound.cpp~  branch_and_bound.h  file_utils.cpp  file_utils.h  main.cpp  main.h  models.h  utils.cpp  utils.h
hw_2/data/: resultsBAB.csv  resultsDP.csv  resultsEH.csv  resultsSH.csv
hw_2/dynamic_programming/: dynamic_programming.cpp  dynamic_programming.h  helper_dynamic.cpp  helper_dynamic.h
hw_2/extended_heuristic/: extended_heuristic.cpp  extended_heuristic.h  helper_extended.cpp  helper_extended.h
hw_2/fptas/: fptas_approximation.cpp  fptas_approximation.h  helper_fptas.cpp  helper_fptas.h
hw_2/report_files/: report.ipynb  report.md  resultsEH.csv  resultsFA.csv
hw_2/simple_heuristics/: helper.cpp  helper.h  simple_heuristic.cpp  simple_heuristic.h
hw_4/: CMakeLists.txt  README.md  main.cpp  main.h
hw_4/algorith_properties/: fill_properties.cpp  fill_properties.h
hw_4/chromosome/: chromosome.cpp  chromosome.h
hw_4/data/: hw_4.ipynb  report.docx  resultsGA.csv
hw_4/file/: file_utils.cpp  file_utils.h  read_file.cpp  read_file.h
hw_4/genetic_algorithm/: calculate_genetic.cpp  calculate_genetic.h  helper_genetic.cpp  helper_genetic.h  knapsack_ga.cpp  knapsack_ga.h
hw_4/model/: Example.h  Instance.h  Item.h  Result.h
hw_5/: CMakeLists.txt  README.md  main.cpp  main.h
hw_5/algorithm_properties/: FillProperties.cpp  FillProperties.h
hw_5/csv/: CreateCsvs.cpp  CreateCsvs.h
hw_5/file/: FileUtils.cpp  FileUtils.h  ReadFile.cpp  ReadFile.h
hw_5/genetic_algorithm/: Chromosome.cpp  Chromosome.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h
hw_5/helper/: HelperGenetic.cpp  HelperGenetic.h
hw_5/model/: Algorithm.h  Instance.h  Result.h
hw_5/report/pythonProject/: report.ipynb
hw_5/report/pythonProject/improved/improved_adaptive_A_testing/results/none/: resultsGA_none.csv  selected_columns.csv
hw_5/report/pythonProject/improved/improved_adaptive_A_testing_easy/results/none/: resultsGA_none.csv  selected_columns.csv
hw_5/report/pythonProject/improved/improved_adaptive_M_testing/results/none/: resultsGA_none.csv  selected_columns.csv
hw_5/report/pythonProject/improved/improved_adaptive_R_testing/results/none/: best_average.csv  resultsGA_none.csv  selected_columns.csv
hw_5/report/pythonProject/improved/improved_adaptive_R_testing_1/results/none/: best_average.csv  resultsGA_none.csv  selected_columns.csv
hw_5/report/pythonProject/improved/improved_adaptive_R_testing_2/results/none/: best_average.csv  resultsGA_none.csv  selected_columns.csv
hw_5/report/pythonProject/improved/improved_adaptive_first_time/results/none/: resultsGA_none.csv  selected_columns.csv
hw_5/report/pythonProject/improved_end_A/results/none/: resultsGA_none.csv  selected_columns.csv
hw_5/report/pythonProject/improved_end_A/results/none/measurements/: wuf-A-100-430-0102-_history.csv  wuf-A-100-430-0103-_history.csv  wuf-A-100-430-0104-_history.csv
hw_5/report/pythonProject/improved_end_all_examples/results/none/: resultsGA_none.csv  selected_columns.csv
hw_5/report/pythonProject/improved_end_all_examples/results/none/measurements/: wuf-A-20-88-01000-_history.csv  (+8964 more)
hw_5/thread_pool/: ThreadPool.cpp  ThreadPool.h
(+1564 files in other folders)
